--- a/WebScraper.ipynb
+++ b/WebScraper.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fills pandas DataFrame with grabbed content from craping code."
+    "Fills pandas DataFrame with grabbed content from scraping code."
    ]
   },
   {
