--- a/WebScraper.ipynb
+++ b/WebScraper.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Web Scraper\n",
-    "Scrapes data from a website and parses it into a csv file. This script is based on the PH tutorial *Intro to Beautiful Soup* by Jeri Wieringa (for getting data from one page) and the BetterProgramming Tutorial *How to Scrape Multiple Pages of a Website Using a Python Web Scraper* by Angelica Dietzel (for getting data from multiple pages). Documentations for *Beautiful Soup* can be found here: https://www.crummy.com/software/BeautifulSoup/bs4/doc/#find-all\n",
-    "The website that I'm scraping is Lexikon Japans Studierende provided by the Staatsbibliothe Berlin: https://themen.crossasia.org/japans-studierende/index/show"
+    "# Web Scraper (multiple pages)\n",
+    "Scrapes data from a website and parses it into a csv file. This script is based on the PH tutorial *Intro to Beautiful Soup* by Jeri Wieringa (for getting data from one page) and the BetterProgramming Tutorial *How to Scrape Multiple Pages of a Website Using a Python Web Scraper* by Angelica Dietzel (for getting data from multiple pages). https://betterprogramming.pub/how-to-scrape-multiple-pages-of-a-website-using-a-python-web-scraper-4e2c641cff8\n",
+    "\n",
+    "Documentations for *Beautiful Soup* can be found here: https://www.crummy.com/software/BeautifulSoup/bs4/doc/#find-all\n",
+    "The website that I'm scraping is Lexikon Japans Studierende provided by the Staatsbibliothek Berlin: https://themen.crossasia.org/japans-studierende/index/show"
    ]
   },
   {
