--- a/WebScraper.ipynb
+++ b/WebScraper.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Web Scraper (multiple pages)\n",
+    "# Japanese Students in Germany (multiple pages)\n",
     "Scrapes data from a website and parses it into a csv file. This script is based on the PH tutorial *Intro to Beautiful Soup* by Jeri Wieringa (for getting data from one page) and the BetterProgramming Tutorial *How to Scrape Multiple Pages of a Website Using a Python Web Scraper* by Angelica Dietzel (for getting data from multiple pages). https://betterprogramming.pub/how-to-scrape-multiple-pages-of-a-website-using-a-python-web-scraper-4e2c641cff8\n",
     "\n",
     "Documentations for *Beautiful Soup* can be found here: https://www.crummy.com/software/BeautifulSoup/bs4/doc/#find-all\n",
