--- a/PeaceTreaties.ipynb
+++ b/PeaceTreaties.ipynb
@@ -6,10 +6,15 @@
    "source": [
     "# Peace Treaties (one page)\n",
     "\n",
-    "The website that I'm scraping here is a database that contains metadata on European peace treaties from 1450 bis 1789. It was created as part of a project that was funded by the DFG (German Research Foundation): https://www.ieg-friedensvertraege.de/vertraege\n",
+    "The website that I'm scraping here is a database that contains metadata on European peace treaties from 1450 to 1789. It was created as part of a project that was funded by the DFG (German Research Foundation): https://www.ieg-friedensvertraege.de/vertraege\n",
     "\n",
     "The collection contains a selection of some 1800 treaties."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
