add notes to fitered url

--- a/PeaceTreaties.ipynb
+++ b/PeaceTreaties.ipynb
@@ -90,27 +90,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://www.ieg-friedensvertraege.de/likecms.php?searchlang=de&step2onpage=3&function=process&process_target=ieg_treaty_mask_step2&site=index.html&nav=1&siteid=2&formlang=de&date=&year_from=&year_till=&location=&partner1=&partner2=&partner3=&language=&archive=&limit=&submit2=suche\"\n",
-    "results = requests.get(url) \n",
-    "soup = BeautifulSoup(results.text, \"html.parser\")"
+    "# url = \"https://www.ieg-friedensvertraege.de/likecms.php?searchlang=de&step2onpage=3&function=process&process_target=ieg_treaty_mask_step2&site=index.html&nav=1&siteid=2&formlang=de&date=&year_from=&year_till=&location=&partner1=&partner2=&partner3=&language=&archive=&limit=&submit2=suche\"\n",
+    "# results = requests.get(url) \n",
+    "# soup = BeautifulSoup(results.text, \"html.parser\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This alternative url is for filtered results only containing treaties involving Russia, using the websites search function. There are more elegant ways to do this, but this works."
+    "Get **filtered results** using a different url. This alternative url is for filtered results only containing treaties involving Russia, using the website's search function. There are more elegant ways to do this, but this works, too."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# url=\"https://www.ieg-friedensvertraege.de/likecms.php?searchlang=de&step2onpage=3&function=process&process_target=ieg_treaty_mask_step2&site=index.html&nav=1&siteid=2&formlang=de&date=&year_from=&year_till=&location=&partner1=9&partner2=&partner3=&language=&archive=&limit=&submit2=suche\"\n",
-    "# results = requests.get(url) \n",
-    "# soup = BeautifulSoup(results.text, \"html.parser\")"
+    "url=\"https://www.ieg-friedensvertraege.de/likecms.php?searchlang=de&step2onpage=3&function=process&process_target=ieg_treaty_mask_step2&site=index.html&nav=1&siteid=2&formlang=de&date=&year_from=&year_till=&location=&partner1=9&partner2=&partner3=&language=&archive=&limit=&submit2=suche\"\n",
+    "results = requests.get(url) \n",
+    "soup = BeautifulSoup(results.text, \"html.parser\")"
    ]
   },
   {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,40 +236,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                  title  \\\n",
-      "0     Heiratsvertrag von Romans-sur-Isère zw. Charlo...   \n",
-      "1                           Friedensvertrag von Ferrara   \n",
-      "2     Leonello d'Este ordnet Gefangenenaustausch an ...   \n",
-      "3                             Friedensvertrag von Genua   \n",
-      "4                                       Friedensvertrag   \n",
-      "...                                                 ...   \n",
-      "1831                           Zweiter Waffenstillstand   \n",
-      "1832                           Dritter Waffenstillstand   \n",
-      "1833  Konvention von Hamburg zur Verlängerung des Ha...   \n",
-      "1834        Freundschafts- und Handelsvertrag von Genua   \n",
-      "1835  Garantieakte von Genf für die Verfassung der R...   \n",
+      "                                                title  \\\n",
+      "0         Bündnis von Gmunden (verlesen: *Brunndenau)   \n",
+      "1                         Waffenstillstand von Moskau   \n",
+      "2                        Präliminarvertrag von Krakau   \n",
+      "3                       Waffenstillstand von Nowgorod   \n",
+      "4                       Waffenstillstand von Nowgorod   \n",
+      "..                                                ...   \n",
+      "95         Konvention über die bewaffnete Neutralität   \n",
+      "96           Schiffahrtskonvention von St. Petersburg   \n",
+      "97  Freundschafts- und Handelsvertrag von St. Pete...   \n",
+      "98                     Friedensvertrag von Versailles   \n",
+      "99  Friedensvertrag von Konstantinopel (Beta-Version)   \n",
       "\n",
-      "                                                  sides        dates  \n",
-      "0                         Frankreich, Savoyen - Piemont    1450 I 28  \n",
-      "1                        Aragon / Neapel - Sizilien ...   1450 VII 2  \n",
-      "2                        Aragon / Neapel - Sizilien ...   1450 VII 2  \n",
-      "3                              Genua, Savoyen - Piemont   1450 IX 17  \n",
-      "4                            Mailand, Savoyen - Piemont  1450 XII 27  \n",
-      "...                                                 ...          ...  \n",
-      "1831                                 Dänemark, Schweden   1788 X 16   \n",
-      "1832                                 Dänemark, Schweden    1788 XI 5  \n",
-      "1833                                Frankreich, Hamburg  1789 III 17  \n",
-      "1834                                    Dänemark, Genua   1789 VI 30  \n",
-      "1835                     Bern, Frankreich, Sardinien...   1789 XII 9  \n",
+      "                                                sides                 dates  \n",
+      "0                                    Kaiser, Russland           1514 VIII 4  \n",
+      "1                                     Polen, Russland  1522 XII 25_1523 I 4  \n",
+      "2                                     Polen, Russland            1523 II 22  \n",
+      "3                                  Russland, Schweden             1524 IV 3  \n",
+      "4                                  Russland, Schweden      1537 III 25_IV 4  \n",
+      "..                                                ...                   ...  \n",
+      "95                                 Russland, Schweden    1780 VII 21_VIII 1  \n",
+      "96                                 Portugal, Russland           1782 VII 13  \n",
+      "97                                 Dänemark, Russland           1782 X 8_19  \n",
+      "98                     Frankreich, Großbritannien,...             1783 IX 3  \n",
+      "99                        Osmanisches Reich, Russland   1784 I 08 / 1198 AH  \n",
       "\n",
-      "[1836 rows x 3 columns]\n"
+      "[100 rows x 3 columns]\n"
      ]
     }
    ],
@@ -288,11 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_treaties.to_csv('new_treaties_all.csv')"
+    "new_treaties.to_csv('new_treaties_rus.csv')"
    ]
   }
  ],
