--- a/JapaneseStudents.ipynb
+++ b/JapaneseStudents.ipynb
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After \"for container in jstudies:\" comes the actual scraping code. The first expression grabs the names from within the 'b' tag with a regex (excluding \"Name\" and any digitals; which are also in bold font). Places, years, and texts can be found within table data ('td') tags within each 'table'. With \"str\" the data is extracted as string. The \\[\\] identifies the position of the individual 'td'; strip=True is required to get rid of any newlines and tabs (\\t and \\n). The \"if\" clause makes sure the code works with missing data."
+    "After \"for container in jstudies:\" comes the actual scraping code. The first expression grabs the names from within the 'b' tag with a regex (excluding \"Name\" and any digits; which are also in bold font). Places, years, and texts can be found within table data ('td') tags within each 'table'. With \"str\" the data is extracted as string. The \\[\\] identifies the position of the individual 'td'; strip=True is required to get rid of any newlines and tabs (\\t and \\n). The \"if\" clause makes sure the code works with missing data."
    ]
   },
   {
