--- a/PeaceTreaties.ipynb
+++ b/PeaceTreaties.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up the containers for capturing treaty names, thes sides involved and the dates of the treaty:"
+    "### Set up the containers for capturing treaty names, the sides involved and the dates of the treaty:"
    ]
   },
   {
